[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/drone.gd" type="Script" id=1]
[ext_resource path="res://assets/drone1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Drone" type="Area2D"]
collision_mask = 512
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PewPewCoolDown" type="Timer" parent="."]
wait_time = 0.5

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
linear_accel = 5.0
color = Color( 1, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 32.0
margin_top = -1.0
margin_right = 72.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_shape_entered" from="." to="." method="_on_Drone_area_shape_entered"]
[connection signal="timeout" from="PewPewCoolDown" to="." method="_on_PewPewCoolDown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
